Open souce title

--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
     </div>
         
     </div>
-
-
+    <div>   
+<div class="open-source"><a href="https://github.com/maria-nr/weather-app-sc">Open-source code </a> </div> by Moldiks 
+    </div>
+    
     <script src="src/script.js"></script>
 </body>
 </html>
