Change div x span
No make the Open source in one line

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
     </div>
     <div>   
        <p>
-<div class="open-source"><a href="https://github.com/maria-nr/weather-app-sc">Open-source code </a> </div> by Moldiks 
+           <span class="open-source">
+<a href="https://github.com/maria-nr/weather-app-sc">Open-source code </a> </span>by Maria Narvaez 
     </div>
 </p>
     <script src="src/script.js"></script>
