--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       Time 
     </h2 >
 
-    <img class="cloudy" src="images/images.png" alt="Cloudy">
+    <img class="cloudy" src="Images/images.png" alt="Cloudy">
     <div class="search">
         <span class="border-bottom">
       <form id="search-country">   
