--- a/index.html
+++ b/index.html
@@ -181,11 +181,12 @@
         
     </div>
     <div>   
-       <p>
+        <footer>
+       
            <span class="open-source">
 <a href="https://github.com/maria-nr/weather-app-sc">Open-source code </a> </span>by Maria Narvaez 
     </div>
-</p>
+        </footer>
     <script src="src/script.js"></script>
 </body>
 </html>
